--- a/tsconfig.json
+++ b/tsconfig.json
@@ -110,9 +110,9 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
     "outDir": "dist",
-    "rootDir": "."
+    "rootDir": "src"
 
   },
-  "include": ["src", "prisma"],
+  "include": ["src", "src/prisma"],
   "exclude": ["node_modules"]
 }
