--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
+    "build": "tsc && prisma generate",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "prestart": "npm run build"
