--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "schema": "src/prisma/schema.prisma"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc && prisma generate",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "prestart": "npm run build"
+    "prisma:generate": "prisma generate --schema=src/prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --schema=src/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
@@ -45,4 +47,5 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
+  
 }
