--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && prisma generate",
+  "build": "tsc && prisma generate && prisma migrate deploy --schema=src/prisma/schema.prisma",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "prisma:generate": "prisma generate --schema=src/prisma/schema.prisma",
